2010-10-26  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Steve Block.

        Quota for IndexedDB should be per origin not per database
        https://bugs.webkit.org/show_bug.cgi?id=48064

        * public/WebIDBFactory.h:
        * public/WebSecurityOrigin.h:
        * src/WebIDBFactory.cpp:
        (WebKit::WebIDBFactory::databaseFileName):
        * src/WebSecurityOrigin.cpp:
        (WebKit::WebSecurityOrigin::get):

2010-10-26  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r70512.
        http://trac.webkit.org/changeset/70512
        https://bugs.webkit.org/show_bug.cgi?id=48314

        crashes many tests (Requested by inferno-sec on #webkit).

        * src/ContextMenuClientImpl.cpp:
        (WebKit::ContextMenuClientImpl::getCustomMenuFromDefaultItems):
        * src/EditorClientImpl.cpp:
        (WebKit::EditorClientImpl::shouldSpellcheckByDefault):

2010-10-25  MORITA Hajime  <morrita@google.com>

        Reviewed by Tony Chang.

        spellcheck='' should be the same as spellcheck="true"
        https://bugs.webkit.org/show_bug.cgi?id=25539

        Followed API rename in WebCore.

        * src/ContextMenuClientImpl.cpp:
        (WebKit::ContextMenuClientImpl::getCustomMenuFromDefaultItems):
        * src/EditorClientImpl.cpp:
        (WebKit::EditorClientImpl::shouldSpellcheckByDefault):

2010-10-25  Satish Sampath  <satish@chromium.org>

        Unreviewed, fix for a build break caused by my earlier patch.

        * public/WebSpeechInputListener.h:
        (WebKit::WebSpeechInputListener::setRecognitionResult): Explicitly invoking the correct constructor.

2010-10-21  Satish Sampath  <satish@chromium.org>

        Reviewed by Jeremy Orlow.

        Allow embedder to pass on all the speech recognition results to the input element.
        https://bugs.webkit.org/show_bug.cgi?id=48068

        * WebKit.gyp: Added new files
        * public/WebSpeechInputListener.h: